--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
         }
     </style>
 </head>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3f8dd6740036b3043a8bf3e000594868',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/3f8dd6740036b3043a8bf3e000594868/invoke.js"></script>
     <div class="image-container">
         <img id="wordImage" alt="Imagen de la palabra" />
     </div>
@@ -260,5 +270,6 @@
 
         initializePuzzle();
     </script>
+    <script type='text/javascript' src='//pl23813044.highrevenuenetwork.com/b5/14/6f/b5146f0fbf8ffa9345196012219f93f3.js'></script>
 </body>
 </html>
